[package]
name = "learn_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_extras = { version = "0.32.0", features = ["default", "image"] }
egui = { version = "0.32", features = ["callstack"] }
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
wgpu = { version = "25", default-features = false, features = ["vulkan"] }
pretty_env_logger = "0.5.0"
log = "0.4.27"
